--- a/agent.ipynb
+++ b/agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 834,
+   "execution_count": 882,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 856,
+   "execution_count": 883,
    "metadata": {},
    "outputs": [
     {
@@ -39,15 +39,6 @@
       "Your rinse aid dispenser will be found on the inside of the door, remove the cap from the dispenser.\n",
       "After verifying that there is rinse aid in the chamber, inspect the cap and chamber for any signs of discoloration, warping, or any other damage.\n",
       "If you find any issues with your rinse aid dispenser while performing this inspection, you will need a replacement rinse aid dispenser.\n",
-      "\n",
-      "How to Fix A Dishwasher That Won't Dry Properly: Heating Element\n",
-      "A malfunctioning heating element may be the cause for dishes not drying. To test the heating element, first, make sure that power to your dishwasher is turned off, and then check for continuity with a multi-meter.\n",
-      "How to test the heating element in a dishwasher with a multimeter:\n",
-      "Unplug your dishwasher before attempting this test.\n",
-      "Your heating element will be found inside the dishwasher, attached to the bottom of the tub. It may be covered or uncovered. If it is covered, remove the cover.\n",
-      "In order to disconnect the heating element, you will need to remove the lower access panel. Remove the wires attached to the heating element’s terminals by carefully grasping the metal connector, do not pull on the wire itself.\n",
-      "To test the element, set your multimeter to Rx1 and touch each probe to a terminal. Your reading should be somewhere between zero and infinity, refer to your owner’s manual to determine what reading you should receive for your model. If it is exactly zero or infinity it is defective.\n",
-      "If your test produces a reading different from the manufacturer’s recommendation, you will need a replacement heating element.\n",
       "\n",
       "\n"
      ]
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 844,
+   "execution_count": 884,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 848,
+   "execution_count": 885,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +120,7 @@
        "(10000, 64)"
       ]
      },
-     "execution_count": 848,
+     "execution_count": 885,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 849,
+   "execution_count": 886,
    "metadata": {},
    "outputs": [
     {
@@ -172,16 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 853,
+   "execution_count": 887,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000, 4)"
+       "array([[ 381,  207,  210,  477],\n",
+       "       [ 526,  911,  142,   72],\n",
+       "       [ 838,  527, 1290,  425],\n",
+       "       [ 196,  184,  164,  359],\n",
+       "       [ 526,  377,  120,  425]])"
       ]
      },
-     "execution_count": 853,
+     "execution_count": 887,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 820,
+   "execution_count": 888,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 821,
+   "execution_count": 889,
    "metadata": {},
    "outputs": [
     {
@@ -385,6 +380,7 @@
     "from typing import Optional\n",
     "from langchain.tools import BaseTool\n",
     "\n",
+    "DATAPATH = \"data\"\n",
     "\n",
     "class SearchPartTool(BaseTool):\n",
     "    name = \"get part info with part number\"\n",
@@ -405,7 +401,7 @@
     "                   \"How to fix my fridge that's constantly ranning? How to fix my dishwasher door? My fridege light is broken\"\n",
     "                   )\n",
     "    \n",
-    "    doc_retriever = Retrieve_internal()\n",
+    "    doc_retriever = Retrieve_internal(path=DATAPATH)\n",
     "    \n",
     "    \n",
     "    def _run(self, question: str) -> str:\n",
@@ -456,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 822,
+   "execution_count": 890,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 823,
+   "execution_count": 891,
    "metadata": {},
    "outputs": [
     {
