--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -8,26 +8,43 @@
    "source": [
     "bf4\n",
     "youtube-transcript-api\n",
-    "sentence-transformer\n",
-    "lang chain\n"
+    "lang chain\n",
+    "flask\n",
+    "openai\n",
+    "numpy\n",
+    "faiss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: WDT970SAHZ0  Whirlpool Dishwasher - Overview\n",
-      "Name: Ask a Question\n",
-      "Name: Your Question Has Been Submitted!\n",
+      "Name: Lower Dishrack Wheel W10195416\n",
+      "Lower Dishrack Wheel Specifications\n",
+      "This OEM gray Dishwasher Lower Dishrack Wheel Assembly is a plastic kit that allows the rack to slide in and out of the dishwasher easily. If it breaks or becomes damaged. sliding will feel difficult. This can happen due to normal wear and tear, and the part should be replaced if this occurs. Check your model number and user manual to make sure this part is correct. It attaches directly to the dishrack. To repair, open the dishwasher door and pull out the lower dishrack. Next, push the tab from both sides and it should pop out. To install the new wheel assembly, place it on the rack and make sure the caps overlap the wire from the inside before you clip it in place by pushing the wheel. It measures roughly 3x6 inches.\n",
+      "Trouble Shooting:\n",
+      "This part fixes the following symptoms:Not cleaning dishes properly | Door won’t close | Noisy | Door latch failure\n",
+      "This part works with the following products:Dishwasher.\n",
+      "This part works with the following products:KitchenAid, Whirlpool, Maytag, Kenmore.\n",
+      "Part# W10195416 replaces these:W10195416V,  W10195416VP\n",
       "Repair Story From Customer:\n",
-      "Pulled dishwasher from under counter, attached link to spring, hooked spring back into frame/chassis, threaded link through pulleys, attached other end of link onto door, reinstalled dishwasher under counter. All's well. Note-I purchased an extra link anticipating that the other one will fail. They're cheap enough.Parts Used:Door Balance Link Kit\n",
-      "1. Open the dishwasher and remove the two plastic grommets about halfway down on either side of the opening. Then remove the two screws under the grommets.2. Remove the kick plate under the door. May have to lower unit by turning the feet using the adjustable wrench.3. Make sure you have enough slack in the water i...Read morenput line and electrical wiring that you can pull the dishwasher out about  12 inches or more.4. There is a spring and nylon rope link on both sides of the unit. Probably just one link is broken, but the replacement comes with two, so you can replace both or save one as a spare. Look at the good side and it should be pretty self explanatory how it attaches. I found it easiest to first thread the link around the lower pulley, then attach the link to the spring, then spring to the rear support, then the link to the door.5. Reverse (2 to 1) to reinstall the dishwasher.Read lessParts Used:Door Balance Link Kit\n",
-      "This was the second time I had this problem so I knew the symptoms and remedy.  The tools needed were two nut drivers a ¼” and 5/16” along with a flat pry bar and Phillips screw driver.  I started by removing the lower front panel by removing the two ¼” screws on either side.  The lower panel will lift up and then can be removed by pullin...Read moreg on the bottom.  There is a flat sheet metal piece behind the front panel with insulation that can be removed very easily along with the front panel.  When the front panel is removed it exposes the front legs that may need to be dropped to let you lift the dishwasher over the tile (if you have ceramic tiles).  The next step would be to remove any ties to the counter top if it is attached.  Mine were attached by the two straps on either side with Phillips screws.  After the top is free, lower the front legs by lifting the dishwasher with the flat pry bar and threading the legs up into their holders.  With the legs lifted the dishwasher can be pulled out to expose the tension springs located along the sides at the very bottom.  Chances are the ropes are broken off the plastic holders that fit over the door hooks.Remove the plastic guides by removing the 5/16” nut from the middle of the lower roller.  Remember to note which hole the screw is coming from this also sets the tension for how fast or slowly the door drops.  Placing the nut closer to the front will drop the door slowly and toward the back will drop the door more quickly.  I placed mine in the middle hole.  When the plastic guides are removed attach the nylon pope to the spring and attach to the back of the dishwasher.  There is a hole located on a flat piece of sheet metal the spring will attach to at the back of the dishwasher (if it is broken).  Check the other side if it is still in tact.  With the spring in place weave the rope around the plastic guides then pull the springs to help get the plastic end over the door hook located at the bottom of the door.  Repeat this operation for the other side (kit has a both sides covered) and reinstall dishwasher in cabinet.Steps1)\tRemove front panel (1/4” nut)2)\tRelease Dishwasher from Cabinet3)\tLower front legs4)\tPull Dishwasher out from under Cabinet5)\tRemove Rope Guide (5/16” nut)6)\tInstall new Rope Guide (Supplied in Kit)7)\tAttach new rope to Spring and attach spring to dishwasher8)\tWeave rope through rope guide9)\tWith door closed pull spring to relieve tension so rope can be attached to door10)\tRepeat for other side (Kit has both sides)Read lessParts Used:Door Balance Link Kit\n"
+      "Installation was very easy. The online video was excellent and clear.Thanks\n",
+      "Pop off the shell assembly from the bottom basket and clip/click on a new wheel assembly.Other Parts Used:Dishrack Adjuster and Wheel AssemblyLower Dishrack Wheel\n",
+      "did need the strength of husbands hands to pop out old partsOther Parts Used:Rack Stop ClipLower Dishrack Wheel\n",
+      "The parts select site had an excellent breakdown of what I needed to replace. When I got the pieces, however, it wasn't so apparent how to do it. I actually used YouTube video to show the process.The trickiest part was actually uninstalling the broken pieces. I had to work backwards through the YouTube video.The o...Read morether tricky bit is having a sense of how hard you can push to snap plastic pieces in and out.Also, watch the whole video! I didn't, and I ran out for a tool (a star driver, I think that's what it's called) that was actually in the bag of screws that came with the assembly.It seems like Kitchen Aid realizes they have a problem with plastic fatigue, because they have replaced some of the plastic parts with metal.If you take your time and stay organized this is a very doable repair.Read lessOther Parts Used:Drawer TrackRack Stop ClipLower Dishrack WheelDishwasher Dish Rack Adjuster Kit - Left and Right Side\n",
+      "followed video instruction\n",
+      "Very, Very easy - watched the Installation Video highlighted on web page and the entire process took less than 5 minutes!\n",
+      "These wheel assembly that came on the lower rack of my dishwasher were junk!  They started falling off within 6 months.  I put them back on to the point that the pin in the center of the wheels would no long stay in place, thus the frustrating situation of the wheels falling off often.Assembly was easy peasy!\n",
+      "Just snapped in the wheel assembly very easy.\n",
+      "With a little pressure, I was able to push off the broken wheel pieces with my thumbs. I was able to snap on the new wheel pieces really easily.This job took less than 15 minutes to replace all 4 wheel pieces.\n",
+      "My husband did the repair.  It was very easy.  He basically just popped off the old wheels and popped on the new ones.\n",
+      "Name: Ask a Question\n",
+      "Name: Your Question Has Been Submitted!\n"
      ]
     }
    ],
@@ -49,6 +66,7 @@
     "        labels = ['div','h1']\n",
     "        classes = ['pd__description','title-lg','title-main','repair-story__instruction','col-md-6 mt-3']\n",
     "        results = soup.find_all(labels,class_=classes)\n",
+    "        \n",
     "        printedStory = False\n",
     "        printedTroubleShooting = False\n",
     "        for result in results:\n",
