--- a/agent.ipynb
+++ b/agent.ipynb
@@ -782,6 +782,82 @@
    "source": [
     "print(output['chat_history'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 902,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import MessagesPlaceholder\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "chat_history = MessagesPlaceholder(variable_name=\"chat_history\")\n",
+    "#memory = ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True)\n",
+    "conversational_memory = ConversationBufferWindowMemory(\n",
+    "    memory_key='chat_history',\n",
+    "    k=5,\n",
+    "    return_messages=True\n",
+    ")\n",
+    "agent_chain = initialize_agent(\n",
+    "    tools = tools, \n",
+    "    llm = llm, \n",
+    "    agent='structured-chat-zero-shot-react-description',\n",
+    "    verbose=True, \n",
+    "    memory=conversational_memory, \n",
+    "    agent_kwargs = {\n",
+    "        \"memory_prompts\": [chat_history],\n",
+    "        \"input_variables\": [\"input\", \"agent_scratchpad\", \"chat_history\"]\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 903,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mHello Erica! How can I assist you today?\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Hello Erica! How can I assist you today?\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = await agent_chain.arun(input=\"Hi I'm Erica.\")\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 904,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mI see you mentioned your name is Erica. How can I assist you today, Erica?\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "I see you mentioned your name is Erica. How can I assist you today, Erica?\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = await agent_chain.arun(input=\"whats my name?\")\n",
+    "print(response)"
+   ]
   }
  ],
  "metadata": {
