--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Repaires are expensive but parts are cheap. There is huge market demands on telling customers how to fix things and buy the right parts, without calling a repair person. And this Chrome extension does exactly that.
+
 Setup:
 1. go in agent/config.py to put your openai api key "sk-..." 
     Note: if you can't use gpt4, change OPENAI_MODEL to 3.5-turbo-0125
